Added new model and updated README.md

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -315,6 +315,7 @@
                         <select id="model" name="model">
                             <option value="gpt2">GPT-2</option>
                             <option value="qwen">Qwen</option>
+                            <option value="tinyllama">TinyLlama Chat</option>
                         </select>
                     </div>
 
@@ -482,7 +483,8 @@
 
                                     const modelNames = {
                                         'gpt2': 'GPT-2',
-                                        'qwen': 'Qwen'
+                                        'qwen': 'Qwen',
+                                        'tinyllama': 'TinyLlama Chat'
                                     };
 
                                     let metaHTML = `
